--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "blogapp-mega",
+  "homepage": "https://github.com/shudhanshusharma05550/Blogging_WebSite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
